• first steps to improve the support of mobile devices [width less than 768px] (since 33% of all request come from smart phones) • fixed layout issue in the "team" page • added footer to "society" site

--- a/dplace_app/static/css/dplace.css
+++ b/dplace_app/static/css/dplace.css
@@ -33,12 +33,12 @@ a {
     border:solid 0px;
 }
 .navbar-brand {
-    height: 125px;
+    height: 95px;
     margin-right: 20px;
 }
 .navbar-brand > img {
-    max-height: 140%;
-    height: 140%;
+    max-height: 150%;
+    height: 150%;
     width: auto;
     margin: 0 auto;
     margin-top: -15px;
@@ -61,6 +61,83 @@ a {
     height: 50px;
     width: 50px;
     opacity: 0.3;
+}
+.navIsNotCollapsed {
+    display: block;
+}
+.navIsCollapsed {
+    display: none;
+}
+@media (max-width: 767px) {
+    body {
+        padding-top: 90px;
+    }
+    .navbar-brand {
+        height: 75px;
+        margin-right: 20px;
+    }
+    .navbar-brand > img {
+        max-height: 140%;
+        height: 140%;
+        width: auto;
+        margin: 0 auto;
+        margin-top: -15px;
+        -o-object-fit: contain;
+        object-fit: contain; 
+    }
+    .socMapCollapsedView {
+        float: none !important;
+        margin-right: 10px;
+    }
+    .navIsNotCollapsed {
+        display: none !important;
+    }
+    .navIsCollapsed{
+        display: block !important;
+    }
+    .navbar-nav {
+        margin: -0px -15px;
+    }
+    .navbar {
+        height: 60px !important;
+    }
+    .navbar-default .navbar-nav > li {
+        height: 55px;
+        line-height: 55px;
+    }
+    .navbar-default .navbar-nav > li > a {
+        text-align: left !important;
+        width:100% !important;
+        font-size:135% !important;
+        color: #000 !important;
+        height:auto;
+        line-height: 40px;
+    }
+    .navbar-collapse {
+        margin-left:35%;
+        height: 120%;
+    }
+    .navbar-default .navbar-nav .dropdown-menu {
+        display: block;
+        position: static;
+        background-color:#efefef;
+        padding-top: 15px;
+        margin-top: -35px;
+        border:0 none;
+        box-shadow:none;
+        text-align: left;
+        width:100%;
+        font-size:130% !important;
+    }
+     .navbar-default .navbar-nav .dropdown-menu > li {
+        height: 55px;
+        line-height: 55px;
+    }
+    .navbar-default .navbar-nav .dropdown-menu > li > a {
+        height: 100%;
+        line-height: 55px;
+        margin-left: 20px !important;
+    }
 }
 .homeActive {
     background-color: red;
@@ -254,17 +331,18 @@ label.light {
 .teamImgTD {
     padding-right:10px;
     padding-bottom:10px;
+    text-align: right;
 }
 
 .leftParaTab {
     float: left;
     position: relative;
     margin-left:10px;
-    margin-right:10px;
+    margin-right:100px;
 }
 
 .rightParaTab {
-    float: right;
+    float: auto;
     position: relative;
     margin-left:10px;
     margin-right:10px;
@@ -486,4 +564,3 @@ label.light {
     background-color:#000;
     opacity:0.25;
 }
-
